...
                          AppSvgs.loginHeader,
                          fit: BoxFit.fitWidth,
                        ),
                      ),
                      const AppSizedBox(height: 4),
                      AppText(
                        "Welcome to\nGreen medical clinic",
                        style: boldText.copyWith(
                          fontSize: 70,
                        ),
                      ),
                      const AppSizedBox(height: 4),
                      AppText(
...
